<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erp42_control_pkg</name>
  <version>0.1.0</version>
  <description>ERP42 ROS2 Serial Communication Control Package</description>
  <maintainer email="ky942400@gmail.com">moonshot</maintainer>
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>erp42_interfaces_pkg</exec_depend>

  <!-- 테스트 도구 의존성 비활성화.
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
