<package format="3">
  <name>erp42_interfaces_pkg</name>
  <version>0.1.0</version>
  <description>ROS 2 interface definitions for ERP42 autonomous vehicle platform.</description>
  <maintainer email="ky942400@gmail.com">moonshot</maintainer>
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 테스트 도구 의존성 비활성화.
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
  </export>
</package>